--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,9 +18,13 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th class="<%= "hilite bg-warning" if @column_selected == 'title' %>"> 
+        <a id="title_header"> <%= link_to "Movie Title", movies_path(:order => "title") %></a>
+      </th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th class="<%= "hilite bg-warning" if @column_selected == 'release_date' %>">
+        <a id="release_date_header"> <%= link_to "Release Date", movies_path(:order => "release_date") %> </a>
+      </th>
       <th>More Info</th>
     </tr>
   </thead>
